Prevent line break on Ori or Ran

--- a/client/stylesheets/summit2014.less
+++ b/client/stylesheets/summit2014.less
@@ -128,3 +128,7 @@ a.share-twitter {
 p a.btn {
   margin-bottom: 2px;
 }
+
+.no-break {
+  white-space: nowrap;
+}
